GTI FIX: Corregido Ambiguous Mapping, Error 404 en Balance y Libro Mayor, y Error 500 en PDF de Convocatoria